--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">永恒2048</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="score">分数：</string>
     <string name="bestscore">最高分：</string>
     <string name="newgame">重新开始</string>
+    <string name="yangxi">我的算法</string>
+    <string name="save">保存</string>
+    <string name="read">读取</string>
 </resources>
