--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,11 @@
     <string name="newgame">重新开始</string>
     <string name="yangxi">我的算法</string>
     <string name="save">保存</string>
-    <string name="read">读取</string>
+    <string name="read">读取</string> 
+    <string name="txtContent">
+        	玩家可以选择上下左右四个方向，若棋盘内的数字出现位移或合并，视为有效移动<br/>
+        	玩家选择的方向上若有相同的数字则合并，每次有效移动可以同时合并，但不可以连续合并<br/>
+        	合并所得的所有新生成数字相加即为该步的有效得分<br/>
+        	技巧：将最大数放置在角落可获得高分
+   	</string> 
 </resources>
